# ART

./: .codecov.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml
.circleci/: config.yml
include/art/: art.h  art_namespace.h  art_node.h  stack.h
src/: art.c  art.cpp  art_node.cpp  art_node_inner.h  likely.h  stack.c  util.cpp  util.h
test/: CMakeLists.txt  art_node_test.cpp  art_test.cpp  stack_test.cpp  util_test.cpp
test/test_data/: words0.txt
